--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@modules/camera": "file:./modules/camera",
     "@modules/live-camera-filters": "file:./modules/live-camera-filters/",
+    "@modules/onboarding": "file:./modules/onboarding/",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
