--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@modules/camera": "file:./modules/camera",
+    "@modules/chat": "file:./modules/chat/",
     "@modules/live-camera-filters": "file:./modules/live-camera-filters/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -27,8 +29,11 @@
     "react-native-dotenv": "^2.5.3",
     "react-native-elements": "^3.3.1",
     "react-native-filter-camera": "0.1.18",
+    "react-native-fs": "2.19.0",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-image-crop-picker": "0.36.2",
+    "react-native-image-crop-picker": "^0.36.2",
+    "react-native-image-picker": "4.7.3",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-permissions": "3.0.4",
     "react-native-radio-buttons-group": "^2.2.11",
     "react-native-reanimated": "~2.4.1",
